[package]
name = "chall_yaml_gen"
version = "0.1.0"
authors = ["Sebastian Toro <storo3@outlook.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
serde_yaml = "0.9.27"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]